SMCS summary by pedon; update .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -4,4 +4,23 @@
 .Ruserdata
 *.xlsx
 *.Rda
-Scripts.Rproj
+*.Rproj
+*.db
+*.gdb
+*.dbf
+*.shp
+*.shx
+*.prj
+*.gpkg
+*.zip
+*.cpg
+*.sbn
+*.sbx
+*.shp.xml
+*.tif
+*.tif*
+*.html
+*.docx
+*.pdf
+*.tfw
+*.lyr
